// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: empty-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: empty-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: full-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: full-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
# </BREAKING-CHANGES-LOG>

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  FIELD_REMOVED: Booking.unstable_baggage was removed.
#  FIELD_REMOVED: BookingOneWay.unstable_baggage was removed.
#  FIELD_REMOVED: BookingInterface.unstable_baggage was removed.
#  FIELD_REMOVED: BookingReturn.unstable_baggage was removed.
#  FIELD_REMOVED: BookingMulticity.unstable_baggage was removed.
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: missing-block.txt 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>
`;

exports[`matches expected output: missing-block.txt 2`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
# <BREAKING-CHANGES-LOG>
#  append: this
#  and append: also this
# </BREAKING-CHANGES-LOG>
`;

exports[`prints warning and updates the schema when backward compatible changes detected 1`] = `
"# @generated SignedSource<<d309d94b9c45979a5e0b9a4ddaba6722>>

# <BREAKING-CHANGES-LOG>
# </BREAKING-CHANGES-LOG>

schema {
  query: RootQuery
}

\\"\\"\\"The query root of the schema\\"\\"\\"
type RootQuery {
  test: Test
  test2: Test2
}

\\"\\"\\"A test object type\\"\\"\\"
type Test {
  id: String
}

\\"\\"\\"A test object type\\"\\"\\"
type Test2 {
  id: String
}"
`;
